--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -25,6 +25,15 @@
   line-height: 21px;
 }
 
+.textForInstructors {
+  font-family: Segoe UI, serif;
+  color: #616161;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  padding: 20px 0;
+}
+
 /*classes for react-transition-group*/
 .enter {
   background-color: rgba(40,153,234,0.5);
