--- a/src/Frontend/src/components/comments/Thread/Thread.less
+++ b/src/Frontend/src/components/comments/Thread/Thread.less
@@ -1,3 +1,5 @@
+@import "./../../../variables.less";
+
 .repliesWrapper {
   width: 100%;
 }
@@ -5,6 +7,10 @@
 .reply {
   margin-top: 15px;
   width: 100%;
+
+  @media(max-width: @maxPhoneWidth) {
+    margin-top: 10px;
+  }
 }
 
 .replyForm {
