--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -36,12 +36,12 @@
 
 /*classes for react-transition-group*/
 .enter {
-  background-color: rgba(40,153,234,0.5);
+  background-color: rgba(40,153,234,0.3);
 }
 
 .enterActive  {
   background-color: transparent;
-  transition: background-color 3000ms ease;
+  transition: background 1000ms ease;
 }
 
 .exit {
@@ -50,5 +50,5 @@
 
 .exitActive {
   opacity: 0.01;
-  transition: opacity 1000ms ease;
+  transition: opacity 500ms ease;
 }
