--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -205,6 +205,7 @@
     .header__logout-link,
     .header__login-link,
     .header__registration-link {
+      > button,
       > a {
         display: inline-block;
         padding: 15px 30px 13px 15px;
