--- a/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
@@ -11,7 +11,7 @@ button {
   align-items: center;
 
   @media (max-width: @maxPhoneWidth) {
-    margin-bottom: 10px;
+    align-self: flex-end;
   }
 }
 
