--- a/src/Frontend/src/components/comments/CommentsView/CommentsView.less
+++ b/src/Frontend/src/components/comments/CommentsView/CommentsView.less
@@ -55,7 +55,7 @@ h1 {
   display: inline-block;
   background: #DADADA;
   border-radius: 100px;
-  padding: 2px 6px;
+  padding: 2px 6px 3px;
   font-family: Segoe UI, serif;
   font-size: 10px;
   text-align: center;
