Changed method for scroll to comment. Refactored code.

--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -2,6 +2,10 @@
   margin-bottom: 30px;
 }
 
+.emptyDiv {
+  height: max-content;
+}
+
 .sendButton {
   color: #3072C4;
   font-family: Segoe UI, serif;
