--- a/src/Frontend/src/components/comments/Comment/Marks/Marks.less
+++ b/src/Frontend/src/components/comments/Comment/Marks/Marks.less
@@ -7,7 +7,7 @@
 }
 
 .correctAnswer, .pinnedToTop {
-  padding: 0 6px 1px;
+  padding: 0 6px 2px;
   color: #fff;
 }
 
@@ -38,4 +38,5 @@
 
 .text {
   margin-left: 3px;
+  letter-spacing: 0.5px;
 }
