Reverted markup changes.

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -110,6 +110,7 @@
 				@Html.Action("SlideComments", "Comments", new { courseId = Model.CourseId, slideId = Model.Slide.Id, showOnlyInstructorsOnlyComments = true})
 			}
 			
+			@Html.Partial("~/Views/Shared/_Footer.cshtml")
 		</div>
 	</div>
 </div>
