--- a/src/Frontend/src/components/comments/CommentSendForm/CommentSendForm.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/CommentSendForm.less
@@ -1,11 +1,6 @@
 @import "../../../variables.less";
 
-button {
-  border: none;
-  background: transparent;
-}
-
-.commentSendForm {
+.formContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -21,7 +16,7 @@ button {
   margin-right: 12px;
 }
 
-.commentSend {
+.form {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
