--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -2,8 +2,8 @@
   margin-bottom: 30px;
 }
 
-.emptyDiv {
-  height: max-content;
+.spacer {
+  height: 2000px;
 }
 
 .sendButton {
@@ -11,13 +11,15 @@
   font-family: Segoe UI, serif;
   line-height: 20px;
   font-size: 14px;
+  border: none;
+  background: transparent;
 }
 
 .sendButtonText {
   margin-left: 4px;
 }
 
-.emptyComments {
+.textForEmptyComments {
   border: 1px solid #E5E5E5;
   border-radius: 3px;
   font-family: Segoe UI, serif;
