--- a/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
@@ -1,9 +1,5 @@
 @import "../../../../variables.less";
 
-button {
-  outline: none;
-}
-
 .markdownButtons {
   display: flex;
   flex-direction: row;
@@ -25,6 +21,12 @@ button {
   @media (max-width: @maxPhoneWidth) {
     display: none;
   }
+}
+
+.button {
+  outline: none;
+  border: none;
+  background: transparent;
 }
 
 ._yellow {
