--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -210,6 +210,9 @@
         display: inline-block;
         padding: 15px 30px 13px 15px;
         text-decoration: none;
+        border: none;
+        outline: none;
+        background: transparent;
 
         @media (max-width: @maxLaptopWidth) {
           & {
