Fixed bugs after after regression testing.

--- a/src/Frontend/src/components/comments/Comment/Marks/Marks.less
+++ b/src/Frontend/src/components/comments/Comment/Marks/Marks.less
@@ -7,7 +7,7 @@
 }
 
 .correctAnswer, .pinnedToTop {
-  padding: 0 6px 2px;
+  padding: 1px 6px 1px;
   color: #fff;
 }
 
@@ -20,7 +20,7 @@
 }
 
 .approvedComment {
-  padding: 0 6px;
+  padding: 1px 6px 1px;
   background: #F2F2F2;
   border: 1px solid #E5E5E5;
   color: #A0A0A0;
