--- a/src/Frontend/src/components/comments/Comment/CommentActions/CommentActions.less
+++ b/src/Frontend/src/components/comments/Comment/CommentActions/CommentActions.less
@@ -16,15 +16,8 @@
 
 .linkText {
   font-size: 13px;
-  color: #333333;
   font-weight: 400;
-  margin: 0 20px 0 5px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-
-  &:hover {
-    color: #fff;
-    text-decoration: none;
-  }
+  margin-left: 5px;
 }
 
 .actions {
