--- a/src/uLearn.Web/Views/Shared/Notifications.cshtml
+++ b/src/uLearn.Web/Views/Shared/Notifications.cshtml
@@ -85,6 +85,24 @@
 	</div>
 }
 
+@helper Notification(NewCommentFromYourGroupStudentNotification notification, Course course, HtmlHelper Html, UrlHelper Url, bool collapse = true)
+{
+	var slide = course.GetSlideById(notification.Comment.SlideId);
+	<div class="notifications__new-comment-from-your-group-student-notification media" data-href="@GetSlideUrl(Url, course, slide)#comment-@notification.Comment.Id">
+		<div class="media-left">
+			@UserAvatar.Avatar(notification.Comment.Author)
+		</div>
+		<div class="media-body">
+			<div class="notifications__notification__header">
+				@UserName(notification.Comment.Author)
+				<span class="notifications__notification__subheader">к&nbsp;слайду @SlideLink(Url, course, slide)</span>
+			</div>
+			<div title="@notification.Comment.Text.TruncateWithEllipsis(200)" class="notifications__comment-notification__text">@CollapseIfNeed(collapse, Html, notification.Comment.Text, 100, renderSimpleMarkdown: true)</div>
+			<div class="notifications__notification__footer" title="@notification.CreateTime.ToPrettyString()">@notification.CreateTime.ToAgoPrettyString()</div>
+		</div>
+	</div>
+}
+
 @helper Notification(RepliedToYourCommentNotification notification, Course course, HtmlHelper Html, UrlHelper Url, bool collapse = true)
 {
 	var slide = course.GetSlideById(notification.Comment.SlideId);
