--- a/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
@@ -29,10 +29,10 @@
   background: transparent;
 }
 
-._yellow {
-  color: #FFF0BC;
+.lightYellow {
+  color: @lightYellow;
 }
 
-._white {
-  color: #ffffff;
+.white {
+  color: #fff;
 }
