--- a/src/Frontend/src/components/comments/CommentsView/CommentsView.less
+++ b/src/Frontend/src/components/comments/CommentsView/CommentsView.less
@@ -50,10 +50,9 @@
 
 .commentsAmount {
   display: inline-block;
-  background: #DADADA;
-  border-radius: 100px;
+  background: @geinsboro;
+  border-radius: 50%;
   padding: 2px 6px 3px;
-  font-family: Segoe UI, serif;
   font-size: 10px;
   text-align: center;
   margin-left: 6px;
