--- a/src/Frontend/src/components/comments/Stub/Stub.less
+++ b/src/Frontend/src/components/comments/Stub/Stub.less
@@ -1,5 +1,7 @@
+@import "./../../../variables.less";
+
 .stub {
-  border: 1px solid #E5E5E5;
+  border: 1px solid @lightGrey;
   box-sizing: border-box;
   border-radius: 3px;
   margin: 0 auto 25px;
@@ -11,9 +13,8 @@
 }
 
 .stubText {
-  font: 16px "Segoe UI";
   line-height: 21px;
   letter-spacing: 1px;
-  color: #616161;
+  color: @darkGrey;
   margin-bottom: 20px;
 }
