--- a/src/Frontend/src/App.less
+++ b/src/Frontend/src/App.less
@@ -1,5 +1,7 @@
+@import "./variables.less";
+
 .headerContentDivider {
   background-color: #f2f2f2;
-  height: 10px;
+  height: @headerDivider;
   display: block;
 }
