--- a/src/Frontend/src/common.less
+++ b/src/Frontend/src/common.less
@@ -1,13 +1,11 @@
 @import "variables.less";
 
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
 }
 
 .caret {
@@ -20,6 +18,14 @@ body {
   border-top: 4px solid \9;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
+}
+
+.visible-only-desktop {
+  @media (min-width: @maxTabletWidth) {
+    & {
+      display: initial;
+    }
+  }
 }
 
 .visible-only-phone {
