--- a/src/Frontend/src/components/comments/Comment/CommentActions/CommentActions.less
+++ b/src/Frontend/src/components/comments/Comment/CommentActions/CommentActions.less
@@ -1,30 +1,17 @@
-.reply {
-  border: 0;
-  background: transparent;
-  color: #3072C4;
-  padding: 0;
+@import "../../commonStyles.less";
+
+.action {
   margin-right: 20px;
-  cursor: pointer;
-  height: 20px;
-}
 
-.text {
-  display: inline-block;
-  margin-left: 5px;
-  font-size: 13px;
-}
-
-.linkText {
-  font-size: 13px;
-  font-weight: 400;
-  margin-left: 5px;
+  button:hover {
+    text-decoration: none;
+  }
 }
 
 .actions {
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
-  margin-top: 5px;
+  margin: 5px 0 20px;
   cursor: pointer;
 }
-
