--- a/src/Frontend/src/components/comments/Comment/Like/Like.less
+++ b/src/Frontend/src/components/comments/Comment/Like/Like.less
@@ -1,3 +1,5 @@
+@import "./../../../../variables.less";
+
 .wrapper {
   display: flex;
   align-items: baseline;
@@ -11,7 +13,7 @@
 }
 
 .count {
-  color: #808080;
+  color: @additionalColor;
   font-size: 14px;
   margin-left: 3px;
 }
