--- a/src/Frontend/src/components/comments/CommentSendForm/CommentSendForm.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/CommentSendForm.less
@@ -1,4 +1,5 @@
 @import "../../../variables.less";
+@import "./../commonStyles.less";
 
 .formContainer {
   display: flex;
@@ -9,7 +10,6 @@
 }
 
 .avatar {
-  display: inline-block;
   border-radius: 4px;
   min-width: 55px;
   height: 55px;
