--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -1,13 +1,16 @@
+@import "./../../../variables.less";
+@import "../commonStyles.less";
+
 .thread {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .spacer {
-  height: 2000px;
+  height: 100vh;
 }
 
 .sendButton {
-  color: #3072C4;
+  color: @linkColor;
   line-height: 20px;
   font-size: 14px;
   border: none;
@@ -19,11 +22,10 @@
 }
 
 .textForEmptyComments {
-  border: 1px solid #E5E5E5;
+  border: 1px solid @lightGrey;
   border-radius: 3px;
-  font-family: Segoe UI, serif;
   font-size: 16px;
-  color: #616161;
+  color: @darkGrey;
   letter-spacing: 1px;
   padding: 30px 80px;
   text-align: center;
@@ -31,28 +33,9 @@
 }
 
 .textForInstructors {
-  color: #616161;
+  color: @darkGrey;
   font-size: 16px;
   font-weight: 500;
   text-align: center;
   padding: 20px 0;
-}
-
-/*classes for react-transition-group*/
-.enter {
-  background-color: rgba(40,153,234,0.3);
-}
-
-.enterActive  {
-  background-color: transparent;
-  transition: background 1000ms ease;
-}
-
-.exit {
-  opacity: 1;
-}
-
-.exitActive {
-  opacity: 0.01;
-  transition: opacity 500ms ease;
 }
