--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -2,6 +2,8 @@
 @maxTabletWidth: 991px;
 @maxPhoneWidth: 767px;
 
+@headerHeight: 50px;
+@headerDivider: 10px;
 @additionalColor: #808080;
 @disabledColor: #A0A0A0;
 @linkColor: #3072C4;
@@ -9,3 +11,8 @@
 @negativeColor: #CE0014;
 @successColor: #228007;
 @accentColor: #D97E00;
+@whiteSmoke: #F2F2F2;
+@lightGrey: #E5E5E5;
+@lightYellow: #FFF0BC;
+@darkGrey: #616161;
+@geinsboro: #DADADA;
