Fixed media query in KebabActions. Delete request from api.updateComment.

--- a/src/Frontend/src/components/comments/Comment/Kebab/KebabActions.less
+++ b/src/Frontend/src/components/comments/Comment/Kebab/KebabActions.less
@@ -1,4 +1,14 @@
+@import "./../../commonStyles.less";
+
 .instructorsActions {
   margin-left: auto;
   cursor: pointer;
+}
+
+.visibleOnPhone {
+  button:hover,
+  a:hover {
+    background: #5199db;
+    color: #fff;
+  }
 }
