some navigation markup

--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -9,14 +9,19 @@
 @accentColor: #F69C00;
 @lightYellow: #FFF0BC;
 @successColor: #228007;
+@progressBarGreen: #3F9726;
 @green: #5cb85c;
 @blue: #0087d5;
+@progressBarBlue: #1D85D0;
 @linkColor: #3072C4;
 @linkHoverColor: #23527c;
 @dimgray: #696969;
 @darkGrey: #616161;
 @additionalColor: #808080;
 @disabledColor: #A0A0A0;
+@metroDefault: #C4C4C4;
 @geinsboro: #DADADA;
 @lightGrey: #E5E5E5;
+@borderColor: #E5E5E5;
 @whiteSmoke: #F2F2F2;
+@backgroundGray: #F2F2F2;
