Fixed bugs after release on the dev server.

--- a/src/Frontend/src/components/comments/Comment/Like/Like.less
+++ b/src/Frontend/src/components/comments/Comment/Like/Like.less
@@ -10,6 +10,11 @@
   background: transparent;
   padding: 0;
   cursor: pointer;
+  outline: none;
+
+  &:hover {
+    color: @darkGrey;
+  }
 }
 
 .count {
