--- a/src/Frontend/src/components/comments/Stub/Stub.less
+++ b/src/Frontend/src/components/comments/Stub/Stub.less
@@ -8,12 +8,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px 80px 20px;
+  padding: 30px 50px 20px;
   text-align: center;
 }
 
 .stubText {
   line-height: 21px;
+  font-size: 16px;
   letter-spacing: 1px;
   color: @darkGrey;
   margin-bottom: 20px;
