--- a/src/Frontend/src/components/comments/Comment/Comment.less
+++ b/src/Frontend/src/components/comments/Comment/Comment.less
@@ -18,7 +18,7 @@
 }
 
 .timeSinceAdded {
-  color: @additionalColor;
+  color: @disabledColor;
   font-size: 14px;
 }
 
@@ -34,6 +34,7 @@
 .textFromServer {
   display: inline-block;
   margin-right: 15px;
+  font-size: 16px;
 }
 
 .commentAnchor {
