--- a/src/Frontend/src/components/comments/Comment/Marks/Marks.less
+++ b/src/Frontend/src/components/comments/Comment/Marks/Marks.less
@@ -16,11 +16,11 @@
 }
 
 .correctAnswer {
-  background: @successColor;
+  background: @green;
 }
 
 .pinnedToTop {
-  background: @linkColor;
+  background: @blue;
 }
 
 .approvedComment {
