--- a/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
@@ -4,16 +4,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-
-  @media (max-width: @maxPhoneWidth) {
-    align-self: flex-end;
-  }
+  align-items: end;
 }
 
 .markdownText {
   line-height: 15px;
-  font-size: 12px;
+  font-size: 14px;
   text-align: center;
   color: @disabledColor;
   margin-right: 26px;
@@ -23,10 +19,15 @@
   }
 }
 
+.buttonBlock {
+  height: 18px;
+}
+
 .button {
   outline: none;
   border: none;
   background: transparent;
+  height: 18px;
 }
 
 .lightYellow {
