--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -12,6 +12,7 @@
 .sendButton {
   color: @linkColor;
   line-height: 20px;
+  outline: none;
   font-size: 14px;
   border: none;
   background: transparent;
@@ -37,5 +38,5 @@
   font-size: 16px;
   font-weight: 500;
   text-align: center;
-  padding: 20px 0;
+  padding: 10px 0;
 }
