--- a/src/Frontend/src/components/comments/CommentsView/CommentsView.less
+++ b/src/Frontend/src/components/comments/CommentsView/CommentsView.less
@@ -33,7 +33,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 20px 0 0;
+  margin: 20px 0;
 }
 
 .tabs {
