--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -8,8 +8,10 @@
 @accentColor: #D97E00;
 @lightYellow: #FFF0BC;
 @successColor: #228007;
-@linkHoverColor: #23527c;
+@green: #5cb85c;
+@blue: #0087d5;
 @linkColor: #3072C4;
+@linkHoverColor: #23527c;
 @darkGrey: #616161;
 @additionalColor: #808080;
 @disabledColor: #A0A0A0;
