--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -29,6 +29,7 @@
   color: @darkGrey;
   letter-spacing: 1px;
   padding: 30px 80px;
+  margin-bottom: 20px;
   text-align: center;
   line-height: 21px;
 }
