--- a/src/Frontend/src/components/comments/CommentSendForm/CommentSendForm.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/CommentSendForm.less
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 20px 0 40px;
+  margin-bottom: 40px;
   width: 100%;
 }
 
