--- a/src/Frontend/src/components/comments/CommentsView/CommentsView.less
+++ b/src/Frontend/src/components/comments/CommentsView/CommentsView.less
@@ -38,6 +38,7 @@
 
 .tabs {
   border-bottom: 1px solid #eee;
+  margin-bottom: 20px;
 
   a {
     text-decoration: none;
@@ -48,7 +49,7 @@
   }
 }
 
-.commentsAmount {
+.commentsCount {
   display: inline-block;
   background: @geinsboro;
   border-radius: 50%;
@@ -58,4 +59,9 @@
   margin-left: 6px;
   line-height: 1.1;
   vertical-align: middle;
+}
+
+.textForInstructors {
+  color: @disabledColor;
+  font-size: 14px;
 }
