--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -5,6 +5,7 @@
 @headerHeight: 50px;
 @headerDivider: 10px;
 @negativeColor: #CE0014;
+@likeColor: #D70C17;
 @accentColor: #D97E00;
 @lightYellow: #FFF0BC;
 @successColor: #228007;
