More style fixes.

--- a/src/Frontend/src/components/comments/commonStyles.less
+++ b/src/Frontend/src/components/comments/commonStyles.less
@@ -7,7 +7,7 @@
 
 .enterActive  {
   background-color: transparent;
-  transition: background 1000ms ease;
+  transition: background-color 1000ms ease-in-out;
 }
 
 .exit {
@@ -16,7 +16,7 @@
 
 .exitActive {
   opacity: 0.01;
-  transition: opacity 500ms ease;
+  transition: opacity 400ms ease;
 }
 
 /*classes with media queries */
