--- a/src/Frontend/src/components/comments/Comment/Comment.less
+++ b/src/Frontend/src/components/comments/Comment/Comment.less
@@ -25,6 +25,9 @@
 }
 
 .text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   margin: 10px 0 5px;
   width: 95%;
 
@@ -38,7 +41,7 @@
   font-size: 16px;
 
   pre {
-    margin: 0;
+    margin: 5px 0 0;
   }
 }
 
