Refactoring code and styles. Fixed bugs.

--- a/src/Frontend/src/components/comments/Comment/Kebab/KebabActions.less
+++ b/src/Frontend/src/components/comments/Comment/Kebab/KebabActions.less
@@ -4,3 +4,9 @@
   margin-left: auto;
   cursor: pointer;
 }
+
+.visibleOnPhone {
+  @media (max-width: @maxPhoneWidth) {
+    display: contents;
+  }
+}
