--- a/src/Frontend/src/components/comments/Comment/Like/Like.less
+++ b/src/Frontend/src/components/comments/Comment/Like/Like.less
@@ -22,10 +22,13 @@
 }
 
 .action {
+  display: flex;
+  align-items: baseline;
   border: 0;
   background: transparent;
   padding: 0;
   outline: none;
+  cursor: inherit;
 }
 
 .count {
