--- a/src/Frontend/src/components/comments/Comment/Marks/Marks.less
+++ b/src/Frontend/src/components/comments/Comment/Marks/Marks.less
@@ -28,9 +28,9 @@
 
 .approvedComment {
   padding: 1px 6px 1px;
-  background-color: #fff;
+  background-color: @lightGrey;
   border: 1px solid @disabledColor;
-  color: @disabledColor;
+  color: @dimgray;
 }
 
 .group {
