--- a/src/Frontend/src/components/comments/CommentsList/CommentsList.less
+++ b/src/Frontend/src/components/comments/CommentsList/CommentsList.less
@@ -22,12 +22,12 @@
   margin-left: 4px;
 }
 
-.textForEmptyComments {
+.textForDisabledComments {
   border: 1px solid @lightGrey;
   border-radius: 3px;
   font-size: 16px;
   color: @darkGrey;
-  letter-spacing: 1px;
+  letter-spacing: 0.2px;
   padding: 30px 80px;
   margin-bottom: 20px;
   text-align: center;
