--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -13,6 +13,7 @@
 @blue: #0087d5;
 @linkColor: #3072C4;
 @linkHoverColor: #23527c;
+@dimgray: #696969;
 @darkGrey: #616161;
 @additionalColor: #808080;
 @disabledColor: #A0A0A0;
