--- a/src/Frontend/src/components/comments/Comment/Comment.less
+++ b/src/Frontend/src/components/comments/Comment/Comment.less
@@ -1,11 +1,11 @@
 @import "./../../../variables.less";
 
 .comment {
+  position: relative;
   display: flex;
   flex-direction: row;
   width: 100%;
   word-wrap: break-word;
-  position: relative;
   border-radius: 4px;
 }
 
@@ -15,7 +15,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   margin-left: 10px;
-  width: 100%;
+  width: inherit;
 }
 
 .timeSinceAdded {
@@ -37,11 +37,15 @@
 }
 
 .textFromServer {
+  display: block;
+  width: inherit;
   margin-right: 15px;
-  font-size: 16px;
+  font-size: 14px;
+  word-break: break-word;
 
   pre {
-    margin: 5px 0 0;
+    margin: 5px 0;
+    width: fit-content;
   }
 }
 
@@ -51,5 +55,5 @@
 }
 
 .isNotApproved {
-  background: @whiteSmoke;
+  opacity: 0.75;
 }
