--- a/src/Frontend/src/components/comments/CommentSendForm/CommentSendForm.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/CommentSendForm.less
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 40px;
+  margin: 10px 0 40px;
   width: 100%;
 }
 
@@ -25,6 +25,10 @@
 
   textarea {
     max-width: 100%;
+
+    @media (max-width: @maxPhoneWidth) {
+      max-width: 95%;
+    }
   }
 }
 
@@ -32,6 +36,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 210px;
+
+    span {
+      margin-right: 10px;
+    }
+
+  @media (max-width: @maxPhoneWidth) {
+    margin-bottom: 10px;
+  }
 }
 
