--- a/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/MarkdownButtons/MarkdownButtons.less
@@ -5,6 +5,10 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: end;
+
+  @media (max-width: @maxPhoneWidth) {
+    margin-bottom: 10px;
+  }
 }
 
 .markdownText {
