--- a/src/Frontend/src/components/comments/CommentSendForm/MarkdownEditor/MarkdownEditor.less
+++ b/src/Frontend/src/components/comments/CommentSendForm/MarkdownEditor/MarkdownEditor.less
@@ -5,10 +5,12 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: baseline;
-  width: inherit;
+  width: 100%;
   margin-top: 12px;
 
   @media (max-width: @maxPhoneWidth) {
+    flex-wrap: wrap;
     align-items: center;
+    width: 95%;
   }
 }
