Changed markup in replies comments, added fixed action in kebab, fixed styles.

--- a/src/Frontend/src/components/comments/Comment/CommentActions/CommentActions.less
+++ b/src/Frontend/src/components/comments/Comment/CommentActions/CommentActions.less
@@ -1,6 +1,7 @@
 @import "../../commonStyles.less";
 
 .action {
+  margin-top: 3px;
   margin-right: 20px;
 }
 
@@ -8,6 +9,5 @@
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
-  margin: 5px 0 10px;
   cursor: pointer;
 }
