--- a/src/Frontend/src/components/comments/Thread/Thread.less
+++ b/src/Frontend/src/components/comments/Thread/Thread.less
@@ -1,14 +1,25 @@
 @import "./../../../variables.less";
 @import "../commonStyles.less";
 
+@replyIndent: 30px;
+
 .repliesWrapper {
   width: 100%;
   margin-top: 10px;
 
   @media(max-width: @maxPhoneWidth) {
-    margin-left: -30px;
-    width: inherit;
+    margin-left: -@replyIndent;
+    width: calc(100% + @replyIndent);
   }
+}
+
+.replies {
+  width: 100%;
+}
+
+.reply {
+  width: 100%;
+  margin-top: 5px;
 }
 
 .action {
@@ -22,9 +33,5 @@
 
 .replyForm {
   padding-right: 20px;
-  width: 100%;
-}
-
-.visibleOnDesktopAndTablet {
   width: 100%;
 }
