--- a/src/Frontend/src/components/comments/Comment/Marks/Marks.less
+++ b/src/Frontend/src/components/comments/Comment/Marks/Marks.less
@@ -4,8 +4,8 @@
 .mark {
   display: flex;
   align-items: center;
+  flex: 0 0 auto;
   text-align: center;
-  line-height: 20px;
   font-size: 14px;
   margin-left: 10px;
   border-radius: 3px;
@@ -33,17 +33,45 @@
   color: @dimgray;
 }
 
+.groupList {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: hidden;
+  max-width: 600px;
+  white-space: nowrap;
+  }
+
 .group {
-  display: none;
+  display: block;
+  min-width: 0;
+  max-width: 170px;
+  padding: 1px 6px;
   border: 1px solid @accentColor;
   color: @accentColor;
-  text-transform: uppercase;
-  line-height: 20px;
-  letter-spacing: 1px;
-  padding: 0 6px 1px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  letter-spacing: 0.2px;
+}
+
+.archiveGroup {
+  border: 1px solid @disabledColor;
+  color: @disabledColor;
+}
+
+.groupName,
+.groupName:hover {
+  color: @accentColor;
+}
+
+.groupMarkOnPhone {
+  background-color: @accentColor;
+  color: #fff;
+  padding: 2px 6px;
+  margin-left: 10px;
+  border-radius: 3px;
 }
 
 .text {
-  margin-left: 3px;
+  margin-left: 4px;
   letter-spacing: 0.2px;
 }
