Refactoring code; added condition to set state in mounted component.

--- a/src/Frontend/src/components/comments/Comment/Header/Header.less
+++ b/src/Frontend/src/components/comments/Comment/Header/Header.less
@@ -7,9 +7,14 @@
   width: inherit;
   align-items: baseline;
   word-break: break-word;
+
+  & > a {
+    flex: 0 0 auto;
+  }
 }
 
 .author {
+  flex: 0 0 auto;
   font-size: 16px;
   margin: 0 5px 0 0;
 
