--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -6,7 +6,7 @@
 @headerDivider: 10px;
 @negativeColor: #CE0014;
 @likeColor: #D70C17;
-@accentColor: #D97E00;
+@accentColor: #F69C00;
 @lightYellow: #FFF0BC;
 @successColor: #228007;
 @green: #5cb85c;
