--- a/src/uLearn.Web/Views/Course/InstructorNote.cshtml
+++ b/src/uLearn.Web/Views/Course/InstructorNote.cshtml
@@ -1,5 +1,4 @@
-﻿@using uLearn
-@using Ulearn.Core
+﻿@using Ulearn.Core
 @model IntructorNoteModel
 
 @{
@@ -13,7 +12,14 @@
 	<div class="container body-content">
 		<div class="row">
 			<div class='slide'>
-				<h1>Заметки преподавателю <small>@Model.Note.Unit.Title</small>
+				<h1>Заметки преподавателю
+					<small>
+						@if (Model.NoteEditUrl != null)
+						{
+							<a href="@Model.NoteEditUrl" target="_blank" style="margin-right: 5px"><span class="glyphicon glyphicon-pencil"></span></a>
+						}
+						@Model.Note.Unit.Title
+					</small>
 				</h1>
 				<hr/>
 				@Html.Raw(Model.Note.Markdown.RenderMarkdown(Model.Note.File))
