--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -29,16 +29,19 @@
 		<div class="row">
 			<div class="slide">
                 <h1>
-                    <span class="slide__title">
-                        @if (Model.ManualChecking != null)
-                        {
-                            @Html.RouteLink(Model.Slide.Title, "Course.SlideById", new { courseId = Model.CourseId, slideId = Model.Slide.Url }, new { title = "Перейти к слайду" })
-                        }
-                        else
-                        {
-                            @Model.Slide.Title
-                        }
-                    </span>
+					<span class="slide__title">
+						@if (Model.ManualChecking != null)
+						{
+							@Html.RouteLink(Model.Slide.Title, "Course.SlideById", new { courseId = Model.CourseId, slideId = Model.Slide.Url }, new { title = "Перейти к слайду" })
+						}
+						else
+						{
+							@Model.Slide.Title
+						}
+						@if(Model.SlideEditUrl != null) {
+							<small><a href="@Model.SlideEditUrl" target="_blank" style="margin-right: 5px"><span class="glyphicon glyphicon-pencil"></span></a></small>
+						}
+					</span>
                     <span class="score">@ShowScore(Model.Score)</span>
                 </h1>
 				@if (!string.IsNullOrEmpty(Model.Error))
