Link to commit in notification

--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -1,6 +1,6 @@
 ﻿@using uLearn.Web.Extensions
 @using Ulearn.Common.Extensions
-@using GitCourseUpdater
+@using Ulearn.Core
 @model uLearn.Web.Controllers.PackagesViewModel
 
 @{
